[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/uiScenes/exitButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/mainMenu/sweetestNightmareTitleScreen.png" type="Texture" id=2]
[ext_resource path="res://scenes/uiScenes/changeSceneButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/uiScripts/mainMenu.gd" type="Script" id=4]
[ext_resource path="res://scenes/particleEffectsScenes/candyWrapperRainParticleVfx.tscn" type="PackedScene" id=5]
[ext_resource path="res://uiThemes/uncannyTheme.tres" type="Theme" id=6]
[ext_resource path="res://assets/sounds/sfx/uiSfx/uiHoverButtons.wav" type="AudioStream" id=7]
[ext_resource path="res://scenes/uiScenes/buttonSfx.tscn" type="PackedScene" id=8]

[node name="mainMenu" type="CanvasLayer" groups=["mainMenus"]]
pause_mode = 2
layer = 100
script = ExtResource( 4 )

[node name="mainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="mainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -3.0
margin_right = 3.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonsContainer" type="VBoxContainer" parent="mainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -161.0
margin_right = 206.0
margin_bottom = 144.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startButton" parent="mainMenu/buttonsContainer" instance=ExtResource( 3 )]
margin_right = 411.0
margin_bottom = 73.0
focus_mode = 0
enabled_focus_mode = 0
nextScenePath = "res://scenes/level1.tscn"

[node name="settingsButton" parent="mainMenu/buttonsContainer" instance=ExtResource( 3 )]
margin_top = 79.0
margin_right = 411.0
margin_bottom = 152.0
focus_mode = 0
enabled_focus_mode = 0
text = "Settings"
nextScenePath = "res://scenes/uiScenes/menuScenes/settingsMenuFromMainMenu.tscn"

[node name="creditsButton" parent="mainMenu/buttonsContainer" instance=ExtResource( 3 )]
margin_top = 158.0
margin_right = 411.0
margin_bottom = 231.0
focus_mode = 0
enabled_focus_mode = 0
text = "Credits"
nextScenePath = "res://scenes/uiScenes/menuScenes/creditsMenuFromMainMenu.tscn"

[node name="exitButton" parent="mainMenu/buttonsContainer" instance=ExtResource( 1 )]
margin_top = 237.0
margin_right = 411.0
margin_bottom = 310.0
focus_mode = 0
enabled_focus_mode = 0
text = "Exit Game"

[node name="buttonSfx" parent="mainMenu/buttonsContainer/exitButton" instance=ExtResource( 8 )]

[node name="hoverBtnSfx" type="AudioStreamPlayer" parent="mainMenu/buttonsContainer/exitButton"]
stream = ExtResource( 7 )
bus = "ui"

[node name="bubbleRainParticleVfx" parent="mainMenu" instance=ExtResource( 5 )]
position = Vector2( 664, -172 )
rotation = 0.657835

[connection signal="mouse_entered" from="mainMenu/buttonsContainer/exitButton" to="." method="_on_exitButton_mouse_entered"]
